<!--
  ~ Copyright (c) 2018 Wilberforce Uwadiegwu.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rootView"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context="com.jadebyte.yonderjobs.job.PostJobFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <EditText
            android:id="@+id/companyValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/round_corner_grey"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:hint="@string/company_s_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.jadebyte.yonderjobs.utils.DelayAutoCompleteTextView
            android:id="@+id/cityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_x_large"
            android:background="@drawable/round_corner_grey"
            android:hint="@string/city"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyValue"/>

        <EditText
            android:id="@+id/companyEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_x_large"
            android:background="@drawable/round_corner_grey"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:hint="@string/company_s_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityEditText"
            app:layout_constraintRight_toRightOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/margin_medium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/cityEditText"
            app:layout_constraintRight_toRightOf="@+id/cityEditText"
            app:layout_constraintTop_toTopOf="@+id/cityEditText"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/whoToHire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who_do_you_want_to_hire"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/margin_x_large"
            app:layout_constraintTop_toBottomOf="@+id/companyEmail"/>

        <Spinner
            android:id="@+id/jobTypesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/round_corner_grey"
            android:entries="@array/job_types"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:prompt="@string/who_do_you_want_to_hire"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whoToHire"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_down_grey_24dp"
            app:layout_constraintRight_toRightOf="@+id/jobTypesSpinner"
            app:layout_constraintTop_toTopOf="@+id/jobTypesSpinner"
            app:layout_constraintBottom_toBottomOf="@+id/jobTypesSpinner"
            android:padding="@dimen/padding_medium"/>

        <EditText
            android:id="@+id/numToHire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_x_large"
            android:background="@drawable/round_corner_grey"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/how_many_do_you_want_to_hire"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobTypesSpinner"/>

        <TextView
            android:id="@+id/technologies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:text="@string/technologies"
            app:layout_constraintTop_toBottomOf="@+id/numToHire"/>

        <LinearLayout
            android:id="@+id/addedTechnologies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/addTechIcon"
            app:layout_constraintTop_toBottomOf="@+id/technologies">

            <include layout="@layout/technology_container"
                android:id="@+id/firstTech"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/addTechIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/padding_medium"
            app:layout_constraintBottom_toBottomOf="@+id/addedTechnologies"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_add_black_24dp"/>

        <TextView
            android:id="@+id/experienceLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:text="@string/experience_level"
            app:layout_constraintTop_toBottomOf="@+id/addedTechnologies"/>

        <Spinner
            android:id="@+id/levelSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/round_corner_grey"
            android:entries="@array/levels"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:prompt="@string/experience_level"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experienceLevel"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_down_grey_24dp"
            app:layout_constraintRight_toRightOf="@+id/levelSpinner"
            app:layout_constraintTop_toTopOf="@+id/levelSpinner"
            app:layout_constraintBottom_toBottomOf="@+id/levelSpinner"
            android:padding="@dimen/padding_medium"/>


        <TextView
            android:id="@+id/salaryOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:text="@string/salary_option"
            app:layout_constraintTop_toBottomOf="@+id/levelSpinner"/>

        <Spinner
            android:id="@+id/salaryOptionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/round_corner_grey"
            android:entries="@array/salary_option"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:prompt="@string/salary_option"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/salaryOption"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_keyboard_arrow_down_grey_24dp"
            app:layout_constraintRight_toRightOf="@+id/salaryOptionSpinner"
            app:layout_constraintTop_toTopOf="@+id/salaryOptionSpinner"
            app:layout_constraintBottom_toBottomOf="@+id/salaryOptionSpinner"
            android:padding="@dimen/padding_medium"/>

        <TextView
            android:id="@+id/workingArrangement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            tools:visibility="gone"
            android:text="@string/working_arrangement"
            app:layout_constraintTop_toBottomOf="@+id/salaryOptionSpinner"/>

        <Spinner
            android:id="@+id/workingArrangementSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/round_corner_grey"
            android:entries="@array/working_arrangement"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:prompt="@string/working_arrangement"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/workingArrangement"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            app:srcCompat="@drawable/ic_keyboard_arrow_down_grey_24dp"
            app:layout_constraintRight_toRightOf="@+id/workingArrangementSpinner"
            app:layout_constraintTop_toTopOf="@+id/workingArrangementSpinner"
            app:layout_constraintBottom_toBottomOf="@+id/workingArrangementSpinner"
            android:padding="@dimen/padding_medium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_x_large"
            android:background="@drawable/round_corner_grey"
            android:hint="@string/extra_info"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:id="@+id/extraInfo"
            android:gravity="top|start"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingLeft="@dimen/padding_x_large"
            android:paddingRight="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workingArrangementSpinner"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/postButton"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/extraInfo"
            android:background="@drawable/round_corner_accent"
            android:layout_marginRight="@dimen/margin_xx_large"
            android:layout_marginLeft="@dimen/margin_xx_large"
            android:layout_marginTop="@dimen/margin_x_large"
            android:text="@string/post_job"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@+id/postButton"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
